# MH-Dowsample-Pro.

./: .env.example  .gitignore  CLAUDE_OPUS_4_8_PROJECT_AUDIT.md  CONTRIBUTING.md  Dockerfile  FROZEN_CORE_CONTRACT.md  LICENSE  README.md  access_control.py  bot.py  config.py  crawler.py  delivery.py  delivery_retry.py  exceptions.py  library_layout.py  organize.py  organizer.py  processor.py  pyproject.toml  quality_gate.py  requirements-dev.txt  requirements.txt  setup_bot_api.py
.github/workflows/: ci.yml
tests/: conftest.py  test_access_control.py  test_bot.py  test_classify_content.py  test_cleanup.py  test_config.py  test_crawler.py  test_db.py  test_delivery.py  test_frozen_core_contract.py  test_library_layout.py  test_network.py  test_organizer.py  test_organizer_concurrent.py  test_paths.py  test_pipeline_e2e.py  test_processor.py  test_quality_gate.py  test_retry.py  test_timeout_deadlock.py  test_timeout_reporting.py  test_wiring.py
tools/: __init__.py  benchmark_onset.py
utils/: __init__.py  cleanup.py  db.py  network.py  paths.py  retry.py
